--- a/index.html
+++ b/index.html
@@ -2,18 +2,40 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
+    <meta name="color-scheme" content="dark light" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Закрывающий тег</title>
+    <link rel="icon" href="./images/favicon.ico" sizes="any" />
+    <link rel="icon" href="./svg/favicon.svg" type="image/svg+xml" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./images/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./images/favicon-16x16.png"
+    />
     <link rel="stylesheet" href="./fonts/fonts.css" />
-    <link rel="stylesheet" href="./styles/variables.css" />
     <link rel="stylesheet" href="./styles/globals.css" />
+    <link rel="stylesheet" href="./styles/variables.css" />
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/animations.css" />
     <link rel="stylesheet" href="./styles/themes.css" />
     <script src="./scripts/set-theme.js"></script>
   </head>
   <body class="page">
-    <header class="header">
+    <header class="header page__section">
+      <h1 class="title-big">&lt;/HTML&gt;</h1>
+      <h2 class="title-med">закрывающий тег</h2>
       <nav class="theme-menu header__theme-menu">
         <!-- Не меняйте разметку этого списка, иначе скрипты перестанут работать -->
         <ul class="theme-menu__list">
@@ -40,7 +62,38 @@
         </ul>
       </nav>
     </header>
-    <main></main>
+    <main class="page__section">
+      <article class="card">
+        <div class="card__description">
+          <h3 class="card__description-title">
+            Фритрек и нулевой спринт: Подготовка к работе
+          </h3>
+          <div class="card__description-image">
+            <img class="card__image" src="./images/image.jpg" loading="lazy" />
+          </div>
+          <p class="card__description-text">
+            Это было самое начало пути. На этом этапе важно было проникнуться
+            основами и настроиться на учёбу. И, возможно, подумать, как новые
+            знания могут повлиять на ваше будущее.
+          </p>
+          <p class="card__description-text">
+            Место для ваших воспоминаний о начале обучения.
+          </p>
+        </div>
+        <div class="card__controls">
+          <button class="card__icon-botton" aria-labelledby="like-button'">
+            <svg class="like-icon"></svg>
+          </button>
+          <button type="button" class="button card__like-button">
+            <span class="button__text">Like</span>
+          </button>
+        </div>
+      </article>
+    </main>
     <script src="./scripts/like.js"></script>
   </body>
 </html>
+
+<svg xmlns="http://www.w3.org/2000/svg">
+  <symbol id="floppy"></symbol>
+</svg>
