--- a/index.html
+++ b/index.html
@@ -62,38 +62,66 @@
         </ul>
       </nav>
     </header>
-    <main class="page__section">
-      <article class="card">
+    <main class="main">
+      <article class="card page__section">
         <div class="card__description">
           <h3 class="card__description-title">
             Фритрек и нулевой спринт: Подготовка к работе
           </h3>
           <div class="card__description-image">
-            <img class="card__image" src="./images/image.jpg" loading="lazy" />
+            <img
+              class="card__image"
+              src="./images/image.jpg"
+              loading="lazy"
+              alt="Описание"
+            />
+						<div class="image__decor">&lt;/HTML&gt;</div>
           </div>
           <p class="card__description-text">
-            Это было самое начало пути. На этом этапе важно было проникнуться
-            основами и настроиться на учёбу. И, возможно, подумать, как новые
-            знания могут повлиять на ваше будущее.
+						Это было самое начало пути. На&nbsp;этом этапе важно было проникнуться основами и&nbsp;настроиться на&nbsp;учёбу. И, возможно, подумать, как новые знания могут повлиять на&nbsp;ваше будущее.
           </p>
           <p class="card__description-text">
-            Место для ваших воспоминаний о начале обучения.
+						Место для ваших воспоминаний о&nbsp;начале обучения.
           </p>
         </div>
         <div class="card__controls">
-          <button class="card__icon-botton" aria-labelledby="like-button'">
-            <svg class="like-icon"></svg>
+          <button class="card__icon-botton" aria-labelledby="like-button">
+            <svg class="like-icon" xmlns="http://www.w3.org/2000/svg" width="27" height="24" viewBox="0 0 27 24" fill="none">
+							<path d="M6 0H3V3H6V0Z" fill="black"/>
+							<path d="M9 0H6V3H9V0Z" fill="black"/>
+							<path d="M3 3H0V6H3V3Z" fill="black"/>
+							<path d="M3 6H0V9H3V6Z" fill="black"/>
+							<path d="M3 9H0V12H3V9Z" fill="black"/>
+							<path d="M12 0H9V3H12V0Z" fill="black"/>
+							<path d="M6 12H3V15H6V12Z" fill="black"/>
+							<path d="M9 15H6V18H9V15Z" fill="black"/>
+							<path d="M12 18H9V21H12V18Z" fill="black"/>
+							<path d="M21 0H24V3H21V0Z" fill="black"/>
+							<path d="M18 0H21V3H18V0Z" fill="black"/>
+							<path d="M24 3H27V6H24V3Z" fill="black"/>
+							<path d="M24 6H27V9H24V6Z" fill="black"/>
+							<path d="M24 9H27V12H24V9Z" fill="black"/>
+							<path d="M15 0H18V3H15V0Z" fill="black"/>
+							<path d="M21 12H24V15H21V12Z" fill="black"/>
+							<path d="M18 15H21V18H18V15Z" fill="black"/>
+							<path d="M15 18H18V21H15V18Z" fill="black"/>
+							<path d="M15 3H12V6H15V3Z" fill="black"/>
+							<path d="M15 21H12V24H15V21Z" fill="black"/>
+						</svg>
           </button>
           <button type="button" class="button card__like-button">
             <span class="button__text">Like</span>
           </button>
         </div>
       </article>
+      <button type="button" class="button save-button">
+				<svg viewBox="0 0 21 21" width="21" height="21" xmlns="http://www.w3.org/2000/svg">
+					<use href="./svg/floppy.svg#floppy"> 
+				</svg>
+        <span class="button__text">Сохранить на память</span>
+      </button>
     </main>
     <script src="./scripts/like.js"></script>
   </body>
 </html>
 
-<svg xmlns="http://www.w3.org/2000/svg">
-  <symbol id="floppy"></symbol>
-</svg>
