--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
               class="card__image"
               src="./images/start.webp"
               loading="lazy"
-              alt="Описание"
+              alt="Начало"
             />
             <div class="image__decor">&lt;начало&gt;</div>
           </div>
@@ -88,7 +88,7 @@
           </p>
         </div>
         <div class="card__controls">
-          <button class="card__icon-button" aria-labelledby="like-button">
+          <button class="card__icon-button" aria-labelledby="like-button-1">
             <svg
               class="like-icon"
               width="39"
@@ -120,7 +120,11 @@
               />
             </svg>
           </button>
-          <button type="button" class="button card__like-button">
+          <button
+            id="like-button-1"
+            type="button"
+            class="button card__like-button"
+          >
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -133,9 +137,9 @@
           <div class="card__description-image">
             <img
               class="card__image"
-              src="./images/white list.webp"
+              src="./images/white_list.webp"
               loading="lazy"
-              alt="Описание"
+              alt="Чистый лист"
             />
             <div class="image__decor">&lt;работа с кодом&gt;</div>
           </div>
@@ -154,7 +158,7 @@
           </p>
         </div>
         <div class="card__controls">
-          <button class="card__icon-button" aria-labelledby="like-button">
+          <button class="card__icon-button" aria-labelledby="like-button-2">
             <svg
               class="like-icon"
               width="39"
@@ -186,7 +190,11 @@
               />
             </svg>
           </button>
-          <button type="button" class="button card__like-button">
+          <button
+            id="like-button-2"
+            type="button"
+            class="button card__like-button"
+          >
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -201,7 +209,7 @@
               class="card__image"
               src="./images/pinki.gif"
               loading="lazy"
-              alt="Описание"
+              alt="Захватим мир с пинки"
             />
             <div class="image__decor">&lt;интересные проекты&gt;</div>
           </div>
@@ -217,7 +225,7 @@
           </p>
         </div>
         <div class="card__controls">
-          <button class="card__icon-button" aria-labelledby="like-button">
+          <button class="card__icon-button" aria-labelledby="like-butto-3">
             <svg
               class="like-icon"
               width="39"
@@ -249,7 +257,11 @@
               />
             </svg>
           </button>
-          <button type="button" class="button card__like-button">
+          <button
+            id="like-button-3"
+            type="button"
+            class="button card__like-button"
+          >
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -281,7 +293,7 @@
           </p>
         </div>
         <div class="card__controls">
-          <button class="card__icon-button" aria-labelledby="like-button">
+          <button class="card__icon-button" aria-labelledby="like-button-4">
             <svg
               class="like-icon"
               width="39"
@@ -313,7 +325,11 @@
               />
             </svg>
           </button>
-          <button type="button" class="button card__like-button">
+          <button
+            id="like-button-4"
+            type="button"
+            class="button card__like-button"
+          >
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -346,7 +362,7 @@
           </p>
         </div>
         <div class="card__controls">
-          <button class="card__icon-button" aria-labelledby="like-button">
+          <button class="card__icon-button" aria-labelledby="like-button-5">
             <svg
               class="like-icon"
               width="39"
@@ -378,7 +394,11 @@
               />
             </svg>
           </button>
-          <button type="button" class="button card__like-button">
+          <button
+            id="like-button-5"
+            type="button"
+            class="button card__like-button"
+          >
             <span class="button__text">hard</span>
           </button>
         </div>
@@ -393,7 +413,7 @@
               class="card__image"
               src="./images/BB.gif"
               loading="lazy"
-              alt="Описание"
+              alt="Химичим"
             />
             <div class="image__decor">&lt;support&gt;</div>
           </div>
@@ -409,7 +429,7 @@
           </p>
         </div>
         <div class="card__controls">
-          <button class="card__icon-button" aria-labelledby="like-button">
+          <button class="card__icon-button" aria-labelledby="like-button-6">
             <svg
               class="like-icon"
               width="39"
@@ -441,7 +461,11 @@
               />
             </svg>
           </button>
-          <button type="button" class="button card__like-button">
+          <button
+            id="like-button-6"
+            type="button"
+            class="button card__like-button"
+          >
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -456,7 +480,7 @@
               class="card__image"
               src="./images/Bullshit.gif"
               loading="lazy"
-              alt="Описание"
+              alt="Все не правда"
             />
             <div class="image__decor">&lt;lifes-style: none; &gt;</div>
           </div>
@@ -471,7 +495,7 @@
           <p class="card__description-text">Большое желание изучать новое.</p>
         </div>
         <div class="card__controls">
-          <button class="card__icon-button" aria-labelledby="like-button">
+          <button class="card__icon-button" aria-labelledby="like-button-7">
             <svg
               class="like-icon"
               width="39"
@@ -503,7 +527,11 @@
               />
             </svg>
           </button>
-          <button type="button" class="button card__like-button">
+          <button
+            id="like-button-7"
+            type="button"
+            class="button card__like-button"
+          >
             <span class="button__text">Like</span>
           </button>
         </div>
@@ -516,7 +544,7 @@
               class="card__image"
               src="./images/world.gif"
               loading="lazy"
-              alt="Описание"
+              alt="Весь мир наш"
             />
             <div class="image__decor">&lt;experience&gt;</div>
           </div>
@@ -534,7 +562,7 @@
           </p>
         </div>
         <div class="card__controls">
-          <button class="card__icon-button" aria-labelledby="like-button">
+          <button class="card__icon-button" aria-labelledby="like-button-8">
             <svg
               class="like-icon"
               width="39"
@@ -566,7 +594,11 @@
               />
             </svg>
           </button>
-          <button type="button" class="button card__like-button">
+          <button
+            id="like-button-8"
+            type="button"
+            class="button card__like-button"
+          >
             <span class="button__text">Like</span>
           </button>
         </div>
