исправление ошибки в автотестах

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
           </p>
         </div>
         <div class="card__controls">
-          <button class="card__icon-button" aria-labelledby="like-butto-3">
+          <button class="card__icon-button" aria-labelledby="like-button-3">
             <svg
               class="like-icon"
               width="39"
