--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <div class="card__description-image">
             <img
               class="card__image"
-              src="./images/start.webp"
+              src="./images/start.gif"
               loading="lazy"
               alt="Начало"
             />
