--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
             type="button"
             class="button card__like-button"
           >
-            <span class="button__text">hard</span>
+            <span class="button__text">Like</span>
           </button>
         </div>
       </article>
