корректировка фоматирования абзацев

--- a/index.html
+++ b/index.html
@@ -83,8 +83,7 @@
             подумать, как новые знания могут повлиять на&nbsp;ваше будущее.
           </p>
           <p class="card__description-text">
-            Очень хотелось понять как устроена разработка но&nbsp;я&nbsp;еще
-            тогда даже не&nbsp;подозревал как все устроено.
+            Очень хотелось понять как устроена разработка.
           </p>
         </div>
         <div class="card__controls">
